# todo

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2022-06-13-095936_create_tasks/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: index.html.tera  success.html.tera
